updated the create api
